--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </header>
 
     <div class="content">
-        <p>Welcome to Velnova Software Solution!<br>
+        <p>Welcome to Velnova Software Solutions!<br>
         Our website is currently down for maintenance but will be back up shortly. Thank you for your patience!</p>
     </div>
 
